--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "lemmy-js-client": "0.19.0-rc.2",
+    "micromark": "^4.0.0",
     "sanitize-html": "^2.11.0"
   }
 }
